# xfce4-tabmanager-plugin

./: Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  autogen.sh  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  configure~  libtool
autom4te.cache/: output.2  output.3  output.4  output.5  requests  traces.0  traces.2  traces.3  traces.4  traces.5
data/: Makefile  Makefile.am  Makefile.in  tabmanager.desktop
src/: Makefile  Makefile.am  Makefile.in  Plugin.cpp  Tab.cpp  TabManager.cpp  TabManager.hpp  Theme.cpp  Theme.hpp  libtabmanager.la  libtabmanager_la-Plugin.lo  libtabmanager_la-Tab.lo  libtabmanager_la-TabManager.lo  libtabmanager_la-Theme.lo
src/.deps/: libtabmanager_la-Plugin.Plo  libtabmanager_la-Tab.Plo  libtabmanager_la-TabManager.Plo  libtabmanager_la-Theme.Plo
src/.libs/: libtabmanager.la  libtabmanager.lai
